--- a/google.css
+++ b/google.css
@@ -1,3 +1,119 @@
-.logo {
-    margin: 50px 0 0 50px; 
+
+nav {
+    padding: 20px;
+    color: rgb(65, 63, 63);
+    font-size: 13px;
 }
+
+.left {
+    float: left;
+}
+
+.right {
+    float: right;
+}
+
+li {
+    display: inline-block;
+    font-family: Arial, Helvetica, sans-serif;
+    padding:  0 7px;   
+}
+
+li:hover { 
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+#apps-icon {
+    height: 25px;
+    width: 25px;
+    margin-right: 6px;
+    margin-bottom: -7px;
+}
+
+.signin-button {
+    background-color: blue;
+    color: white;
+    border: none;
+    padding: 7px 12px;
+    font-weight: bold;
+    border-radius: 2px;
+}
+
+#logo {
+    margin: 47px auto 0 auto ;
+    padding-top: 40px;
+    display: block;
+}
+
+.search-bar {
+    width: 570px;
+    height: 45px;
+    border: .5px solid gray;
+    border-radius: 25px;
+    display: flex;
+    margin: 25px auto;
+}
+
+.search-bar:hover {
+    box-shadow: 0 0 5px rgb(201, 199, 199);
+}
+
+
+
+.magnifying-glass {
+    height: 20px;
+    width: 20px;
+    margin: auto 15px;
+}
+
+.text-input {
+    border: none;
+    height: 40px;
+    width: 470px;
+    margin: auto;
+    outline: none;
+    font-size: 15px;
+}
+
+.microphone{
+    height: 20px;
+    width: 16px;
+    margin: auto;
+    margin-right: 20px;
+}
+
+.buttons {
+    text-align: center;
+}
+
+.s-button{
+    display: inline-block;
+    /* text-align: center; */
+    margin: 5px 5px;
+    border: none;
+    padding: 10px 16px;
+    background-color: lightgray;
+    color: #3b3b3b;
+    outline: none;
+}
+
+.s-button:hover {
+    box-shadow: 0 0 2px gray;
+    cursor: pointer;
+}
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 97%;
+    background-color: #f5f0f0fb;
+    border-top: 1px solid #e4e4e4; 
+}
+
